  you will need to pin ``hypatia`` to an older release.  You should know that
  the most recent release of ``ZODB3`` at this time (3.11) actually implies
  ZODB v4 (I know it's not exactly obvious, but Jim ensures me it is), so if
  you really require ZODB v3, you'll need to pin ``ZODB3`` to below 3.11 and
  ``hypatia`` to below this release.

0.2 (2014-05-16)
----------------

- Query objects are now consulted for intersect and union operations via
  methods, instead of the intersection/union logic being embedded in And and Or
  query objects.  This makes it possible to create query object types which
  intersect and/or union differently when combined with other query results.

0.1 (2014-02-09)
----------------

- Fix a typo in the Sphinx docs, which causes intersphinx references to
  fail.

0.1a7 (2013-10-08)
------------------

- Add a ``unique_values`` API to field index.

- Sometimes an ``index`` attribute could not be found to resolve a result 
  set when deeply nesting boolean operations (like And and Or).  See 
  https://github.com/Pylons/hypatia/pull/5

- Throw an Unsortable properly when a field index without any docids is used as
  a sort index and ``raise_unsortable`` is ``True``.

0.1a6 (2013-05-30)
------------------

- Add ``check_query`` method to text index to allow for checking if a search
  term is parseable.

0.1a5 (2013-05-06)
------------------

- Added support for Python 3.2 / 3.3.

- Fix signature of TextIndex.sort (it would fail when e.g. raise_unsortable was
  passed).

- Add the a ``sort_type`` keyword argument to ``IIndexSort.sort`` and
  ``IResultSet.sort`` methods.  This value can be passed by calling code to
  control the type of sorting used.

- Add two constants: ``hypatia.interfaces.STABLE`` and
  ``hypatia.interfaces.OPTIMAL``.  These can be used as explicit arguments to
  the ``IIndexSort.sort`` and ``IResultSet.sort`` ``sort_type`` parameter to
  control the stability of sorting.
