@@ -9,6 +9,8 @@ Next release
   you really require ZODB v3, you'll need to pin ``ZODB3`` to below 3.11 and
   ``hypatia`` to below this release.
 
+- Keyword indices now have a ``unique_values`` method like Field indexes.
+
 0.2 (2014-05-16)
 ----------------
 
